--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,9 @@ RUN npm install
 
 COPY . .
 
+ENV VITE_API_URL=http://localhost:3000
+ENV VITE_SOCKET_URL=http://localhost:3000
+
 RUN npm run build
 
 FROM nginx:alpine
